organizational changes und texts

--- a/Coaching.html
+++ b/Coaching.html
@@ -6,7 +6,6 @@ title: Systemische Beratung in Hamburg
 
 <div id="Coaching">
 
-<h1>Systemische Beratung in Hamburg</h1>
 
 <img src="/images/visitcard4.JPG" class="half-width right" />
 
@@ -36,13 +35,7 @@ Seien Sie also gespannt. :)
 </ul>
 </p>
 
-<p>Oft hilft schon ein anderer Blickwinkel, um eine Situation neu zu bewerten und Handlungsoptionen zu erkennen. Was würde geschehen, wenn Sie mir jetzt schreiben: 
-<script language="JavaScript">
-var username = "beratung";
-var hostname = "slightlyopaque.net";
-var linktext = username + "@" + hostname ;
-document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
-</script> ?
+<p>Oft hilft schon ein anderer Blickwinkel, um eine Situation neu zu bewerten und Handlungsoptionen zu erkennen. Was würde geschehen, wenn Sie mir jetzt <a href=/Contact.html" >schreiben</a>? 
 </p>
 
 </div>
