--- a/Contact.html
+++ b/Contact.html
@@ -1,16 +1,15 @@
 ---
 layout: default
-title: Contact & Imprint
+title: Kontakt & Impressum
 ---
 
-<h1>Contact & Imprint</h1>
 <p>Angaben gemäß § 5 TMG:</p>
 <p> Caroline Kikisch<br>
 22049 Hamburg<br>
 Germany</p>
 
 <script language="JavaScript">
-var username = "hello";
+var username = "beratung";
 var hostname = "slightlyopaque.net";
 var linktext = username + "@" + hostname ;
 document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
@@ -21,5 +20,4 @@ document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" +
 	<ul class="list_inline">
 		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li>
 		<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
-		<li><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" target="_blank">freelancermap</a></li>
 	</ul>
