--- a/index.html
+++ b/index.html
@@ -1,24 +1,49 @@
 ---
 layout: default
-title: slightly opaque ... home
+title: Beratung, Coaching, Mediation
 ---
 
 
-<div id="home">
+<div id="about">
+<img src="/images/IMG_2735.JPG" class="third-width right" />
 
-<img src="/images/IMG_2735.JPG" class="third-width left" />
+<h1>Worum geht's?</h1>
 
-<h1>What is ... slightly opaque?</h1>
 
-<p>
-slightly opaque is the homepage of Caroline Kikisch. <br>
-I do <a href="/Coaching.html" >Coaching</a> for individuals and teams and Software Quality Assurance. Occasionally, I also participate in social / cultural anthropological studies. <br>
-For more information about what I do and what I am interested in, please see the <a href="/About.html">About</a> section.<p>
+<p> 
+Mein Name ist Caroline Kikisch.<br>
+Ich arbeite als Coach und Beraterin.  <br>
+Hierbei unterstütze ich Teams in Findungsphasen (Teambuilding) und im Umgang mit Problemen (Konfliktcoaching), sowie bei der Erarbeitung von Strategien und Visionen.  <br>
+Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönlichen Zielen und begleite auf den Wegen dorthin.   
+</p>
 
-If you'd rather enjoy some writing, please visit <a href="/Articles.html">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa.html">Santa</a>, a slightly atypical character. <br>
-Occasionally, I write about <a href="/Hacks.html">Hacking</a> and provide the links to the Github repository where you can find the scripts and small programs I wrote. <br>
+<h2>Ich biete:</h2>
+<ul>
+    <li><a href="/Coaching.html" >Systemische Beratung und Coaching</a></li>
+    <li>Team- und Organisationsentwicklung</li>
+    <li>Systemische Mediation und Konfliktberatung</li>
+    <li>Agile Coaching / Scrum Master (PSM1)</li>
+    <li>Moderation mit Lego® Serious Play®</li>
+    <li>Persönliche Problemlösung und Weiterentwicklung </li>
+</ul>
 
-Enjoy!</p>
+<h2>Ich habe Erfahrungen in folgenden Bereichen und Branchen:</h2>
+<ul>
+    <li>Prozessanalyse und -beratung</li>
+    <li>Software Quality Assurance</li>
+    <li>Release Management</li> 
+    <li>Project, Product und Client Management</li> 
+    <li>Wissenschaft und Lehre (Soziologie und Kulturanthropologie)</li>
+    <li>IT-Branche (v.a. e-commerce und e-dating)</li>
+    <li>Verlagswesen</li>
+    <li>Wissenschaftsbetrieb / Universitäten</li>
+    <li>Agenturen</li>
+</ul> 
+	
+
+<h2>Interesse an einer Zusammenarbeit?</h2>
+<p>Ich freue mich über Ihre <a href="/Contact">Kontaktaufnahme</a>.   <br>
+In einem kostenfreien Erstgespräch lernen wir uns gegenseitig kennen und besprechen, ob und in welcher Form eine Zusammenarbeit sinnvoll ist.
+</p>
+
 </div>
-
-
