changes in layout and meta stuff

--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@ Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönliche
 <h2>Ich habe Erfahrungen in folgenden Bereichen und Branchen:</h2>
 <ul>
     <li>Prozessanalyse und -beratung</li>
-    <li>Software Quality Assurance</li>
-    <li>Release Management</li> 
-    <li>Project, Product und Client Management</li> 
-    <li>Wissenschaft und Lehre (Soziologie und Kulturanthropologie)</li>
+    <li>Software Quality Assurance und Release Management </li>
+    <li>Client, Product und Project Management</li>
     <li>IT-Branche (v.a. e-commerce und e-dating)</li>
-    <li>Verlagswesen</li>
-    <li>Wissenschaftsbetrieb / Universitäten</li>
     <li>Agenturen</li>
+    <li>Wissenschaft und Lehre (Soziologie und Kulturanthropologie)</li>
+    <li>Wissenschaftsbetrieb / Universitäten</li>
+    <li>Verlagswesen</li>
 </ul> 
 	
 
