--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -1,31 +1,18 @@
 ---
 layout: default
-title: Kontakt & Impressum
+title: Datenschutzerklärung
 ---
 
-<p>Angaben gemäß § 5 TMG:</p>
-<p> Caroline Kikisch<br>
-22049 Hamburg<br>
-Germany</p>
 
-<script language="JavaScript">
-var username = "beratung";
-var hostname = "slightlyopaque.net";
-var linktext = username + "@" + hostname ;
-document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
-</script>
+<div id="Datenschutz">
 
 
-<p>Let's connect!</p>
-	<ul class="list_inline">
-		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li>
-		<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
+<img src="/images/visitcard4.JPG" class="half-width right" />
 
-	</ul>
 
-        
-<h1>Datenschutzerklärung</h1>
-<h2>Allgemeine Hinweise</h2>
+
+
+<h1>Allgemeine Hinweise</h1>
 <h3>Links zu anderen Websiten</h3>
 <p>Diese Webseiten enthalten Links zu externen Webseiten, die nicht unter unserer Kontrolle stehen. Für die Verarbeitung von Daten, die durch das Anklicken dieser Links an Dritte übertragen werden (z.B. Ihre IP-Adresse und Browserinformationen) können wir keine Verantwortung übernehmen.</p>
 
@@ -34,3 +21,6 @@ document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" +
 
 <h3>Verantwortliche</h3>
 <p>Der Verantwortliche im Sinne der Datenschutzgrundverordnung (DSGVO) und anderer nationaler Datenschutzgesetze der Mitgliedsstaaten sowie sonstiger datenschutzrechtlicher Bestimmungen ist Caroline Kikisch.</p>
+
+
+</div>
