--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Systemische Beratung, Coaching und Mediation in Hamburg
+title: Systemische Beratung, Coaching und Mediation
 ---
 
 
@@ -12,9 +12,9 @@ title: Systemische Beratung, Coaching und Mediation in Hamburg
 
 <p> 
 Mein Name ist Caroline Kikisch.<br>
-Ich arbeite als Coach und Beraterin.  <br>
+Ich arbeite als Coach, Beraterin und Mediatorin. <br>
 Hierbei unterstütze ich Teams in Findungsphasen (Teambuilding) und im Umgang mit Problemen (Konfliktcoaching), sowie bei der Erarbeitung von Strategien und Visionen.  <br>
-Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönlichen Zielen und begleite auf den Wegen dorthin.   
+Auf individueller Basis helfe ich bei der Entwicklung von persönlichen Zielen und bei privaten oder beruflichen Veränderungsprozessen.
 </p>
 
 <h2>Ich biete:</h2>
