--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Systemische Beratung, Coaching und Mediation
 
 
 <div id="about">
-<img src="/images/IMG_2735.JPG" class="third-width right" />
+<img src="/images/ck-sw.jpg" class="third-width right" />
 
 <h1>Worum geht's?</h1>
 
