--- a/Contact.html
+++ b/Contact.html
@@ -5,8 +5,9 @@ title: Kontakt & Impressum
 
 <p>Angaben gemäß § 5 TMG:</p>
 <p> Caroline Kikisch<br>
-22049 Hamburg<br>
-Germany</p>
+Bleicherstr. 74<br>
+22767 Hamburg<br>
+Deutschland</p>
 
 <script language="JavaScript">
 var username = "beratung";
