--- a/Coaching.html
+++ b/Coaching.html
@@ -35,7 +35,8 @@ Seien Sie also gespannt. :)
 </ul>
 </p>
 
-<p>Oft hilft schon ein anderer Blickwinkel, um eine Situation neu zu bewerten und Handlungsoptionen zu erkennen. Was würde geschehen, wenn Sie mir jetzt <a href=/Contact.html" >schreiben</a>? 
+<p>Oft hilft schon ein anderer Blickwinkel, um eine Situation neu zu bewerten und Handlungsoptionen zu erkennen.<br>
+Was würde geschehen, wenn Sie mir jetzt <a href=/Contact.html" >schreiben</a>? 
 </p>
 
 </div>
