--- a/Contact.html
+++ b/Contact.html
@@ -17,12 +17,11 @@ document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" +
 </script>
 
 
-<p>Let's connect!</p>
-	<ul class="list_inline">
-		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li>
-		<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
-
-	</ul>
+<h2>Weitere Profile im Netz:</h2>
+<ul class="list_inline">
+	<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li>
+	<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
+</ul>
 
         
 <h1>Datenschutzerklärung</h1>
