--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Systemische Beratung, Coaching und Mediation
 
 
 <div id="about">
-<img src="/images/IMG_2735.JPG" class="third-width right" />
+<img src="/images/IMG_2735.JPG" class="third-width left" />
 
 <h1>Worum geht's?</h1>
 
@@ -13,7 +13,7 @@ title: Systemische Beratung, Coaching und Mediation
 <p> 
 Mein Name ist Caroline Kikisch.<br>
 Ich arbeite als Coach, Beraterin und Mediatorin. <br>
-Hierbei unterstütze ich Teams in Findungsphasen (Teambuilding) und im Umgang mit Problemen (Konfliktcoaching), sowie bei der Erarbeitung von Strategien und Visionen.  <br>
+Hierbei unterstütze ich Teams in Findungsphasen (z.B. Teambuilding) und im Umgang mit Problemen (z.B. Konfliktcoaching), sowie bei der Erarbeitung von Strategien und Visionen.  <br>
 Auf individueller Basis helfe ich bei der Entwicklung von persönlichen Zielen und bei privaten oder beruflichen Veränderungsprozessen.
 </p>
 
@@ -32,11 +32,12 @@ Auf individueller Basis helfe ich bei der Entwicklung von persönlichen Zielen u
     <li>Prozessanalyse und -beratung</li>
     <li>Software Quality Assurance und Release Management </li>
     <li>Client, Product und Project Management</li>
-    <li>IT-Branche (v.a. e-commerce und e-dating)</li>
+    <li>IT-Branche</li>
     <li>Agenturen</li>
-    <li>Wissenschaft und Lehre (Soziologie und Kulturanthropologie)</li>
+    <li>Wissenschaft und Lehre </li>
     <li>Wissenschaftsbetrieb / Universitäten</li>
     <li>Verlagswesen</li>
+    <li>Vereinswesen</li>
 </ul> 
 	
 
