--- a/Contact.html
+++ b/Contact.html
@@ -2,27 +2,32 @@
 layout: default
 title: Kontakt & Impressum
 ---
-
-<p>Angaben gemäß § 5 TMG:</p>
-<p> Caroline Kikisch<br>
-Bleicherstr. 74<br>
-22767 Hamburg<br>
-Deutschland</p>
-
+<h1>Haben Sie Interesse an einer Zusammenarbeit?</h1>
+<h2>Caroline Kikisch</h2>
+Tel: +49 (0) 179 459 2524<br>
+E-Mail: 
 <script language="JavaScript">
 var username = "beratung";
 var hostname = "slightlyopaque.net";
 var linktext = username + "@" + hostname ;
 document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
 </script>
-
+</p>
 
 <h2>Weitere Profile im Netz:</h2>
 <ul class="list_inline">
 	<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li>
+         und 
 	<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
 </ul>
 
+<p>Ich freue mich auf Sie.</p>
+
+<h2>Angaben gemäß § 5 TMG:</h2>
+<p> Caroline Kikisch<br>
+Bleicherstr. 74<br>
+22767 Hamburg<br>
+Deutschland</p>
         
 <h1>Datenschutzerklärung</h1>
 <h2>Allgemeine Hinweise</h2>
