--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@ title: Kontakt & Impressum
     E-Mail: 
     <script language="JavaScript">
     var username = "beratung";
-    var hostname = "slightlyopaque.net";
+    var hostname = "caroline-kikisch.de";
     var linktext = username + "@" + hostname ;
     document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
     </script>
