--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@ title: Systemische Beratung, Coaching und Mediation
 
 <p> 
 Mein Name ist Caroline Kikisch.<br>
-Ich arbeite als Coach, Beraterin und Mediatorin. <br>
-Hierbei unterstütze ich Teams in Findungsphasen (z.B. Teambuilding) und im Umgang mit Problemen (z.B. Konfliktcoaching), sowie bei der Erarbeitung von Strategien und Visionen.  <br>
+Ich arbeite als Coach, Beraterin und Mediatorin.
+</p>
+<p>
+Hierbei unterstütze ich Teams in Findungsphasen (z.B. Teambuilding) und im Umgang mit Problemen (z.B. Konfliktcoaching), sowie bei der Erarbeitung von Strategien und Visionen.  
+</p>
+<p>
 Auf individueller Basis helfe ich bei der Entwicklung von persönlichen Zielen und bei privaten oder beruflichen Veränderungsprozessen.
 </p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
 
 <h2>Ich biete:</h2>
 <ul>
