--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ title: Systemische Beratung, Coaching und Mediation
 <div id="about">
 <img src="/images/IMG_2735.JPG" class="third-width left" />
 
-<h1>Worum geht's?</h1>
-
+<h1>Vorstellung und Angebot</h1>
 
 <p> 
 Mein Name ist Caroline Kikisch.<br>
@@ -18,34 +17,34 @@ Ich arbeite als Coach, Beraterin und Mediatorin.
 Hierbei unterstütze ich Teams in Findungsphasen (z.B. Teambuilding) und im Umgang mit Problemen (z.B. Konfliktcoaching), sowie bei der Erarbeitung von Strategien und Visionen.  
 </p>
 <p>
-Auf individueller Basis helfe ich bei der Entwicklung von persönlichen Zielen und bei privaten oder beruflichen Veränderungsprozessen.
+Auf individueller Basis unterstütze ich beispielsweise bei der Entwicklung und Verfolgung von persönlichen Zielen und bei privaten oder beruflichen Veränderungsprozessen.
 </p>
 
-<h2>Ich biete:</h2>
+<h2>Erfahrung und Interessen</h2>
 <ul>
     <li><a href="/Coaching.html" >Systemische Beratung und Coaching</a></li>
     <li>Team- und Organisationsentwicklung</li>
     <li>Systemische Mediation und Konfliktberatung</li>
+    <li>Supervision</li>
     <li>Agile Coaching / Scrum Master (PSM1)</li>
-    <li>Moderation mit Lego® Serious Play®</li>
+    <li>Moderation und Visionsgestaltung mit Lego® Serious Play®</li>
     <li>Persönliche Problemlösung und Weiterentwicklung </li>
+    <li>Prozessanalyse und -beratung</li>
 </ul>
 
-<h2>Ich habe Erfahrungen in folgenden Bereichen und Branchen:</h2>
+<h2>Spezifische Branchenkenntnisse</h2>
 <ul>
-    <li>Prozessanalyse und -beratung</li>
-    <li>Software Quality Assurance und Release Management </li>
-    <li>Client, Product und Project Management</li>
-    <li>IT-Branche</li>
-    <li>Agenturen</li>
-    <li>Wissenschaft und Lehre </li>
-    <li>Wissenschaftsbetrieb / Universitäten</li>
+    <li>IT-Branche (große und kleine Unternehmen)</li>
+    <li>(Digital- und Design-) Agenturen</li>
+    <li>Behörden und behördenähnliche Strukturen</li>
+    <li>Wissenschaft und Lehre (Wissenschaftsbetrieb / Universitäten)</li>
     <li>Verlagswesen</li>
     <li>Vereinswesen</li>
+    <li>Kulturbereich</li>
 </ul> 
 	
 
-<h2>Interesse an einer Zusammenarbeit?</h2>
+<h2>Haben Sie Interesse an einer Zusammenarbeit?</h2>
 <p>Ich freue mich über Ihre <a href="/Contact">Kontaktaufnahme</a>.   <br>
 In einem kostenfreien Erstgespräch lernen wir uns gegenseitig kennen und besprechen, ob und in welcher Form eine Zusammenarbeit sinnvoll ist.
 </p>
